# krobot

./: README.md  build.sh
kRobotControl/: CMakeLists.txt  main.cpp  motionplayer.cpp  motionplayer.h  naocontroller.cpp  naocontroller.h  naoposes.cpp  naoposes.h  naostatus.cpp  naostatus.h  qiproject.xml
kRobotControl/networking/: addr.cpp  addr.h  netexception.cpp  netexception.h  socket.cpp  socket.h  udpsocket.cpp  udpsocket.h
models/nao_rcss3d/: nao.yml
models/nao_rcss3d/meshes/: nao.mtl
models/nao_v4_h21/: nao.yml
models/nao_v4_h21/meshes/: Nao.mtl
motions/: arm_flip.ksm  rom_arms_0.ksm  rom_arms_1.ksm  rom_arms_2.ksm  rom_arms_3.ksm  rom_legs_1.ksm  rom_legs_2.ksm
scripts/: config.yml  krobot.sh  nao_rcss3d.sh  nao_v4h21.sh
src/edu/miami/cs/krobot/: Config.java  MainApp.java  MainControl.java  MotionPlayer.java
src/edu/miami/cs/krobot/mapping/: Nao3D.java  Nao3DHipTable.java  Nao3DMapper.java  NaoH21.java  NaoH21HipTable.java  NaoH21Mapper.java  NiSkeletonMapper.java
src/edu/miami/cs/krobot/model/: KinematicChain.java  Model.java  ModelListener.java  ModelMessenger.java  ModelPart.java  ModelPlayer.java  ModelPose.java  ModelRecorder.java  ModelStatus.java  PoseInterpolation.java  RootPart.java
src/edu/miami/cs/krobot/openni/: KinectSensor.java  NiJoint.java  NiSkeleton.java  NiSkeletonPlayer.java  NiSkeletonRecorder.java  NiSkeletonSource.java  NiSkeletonSrcListener.java
src/edu/miami/cs/krobot/ui/: CamController.java  Joint1DOFControl.java  (+9 more)
src/shaders/: depth.fs  depth.vs  phong.fs  phong.vs  phong_shadow.fs  phong_shadow.vs
(+17 files in other folders)
